# light-serializer

./: CMakeLists.txt  README.md
serializer/: CMakeLists.txt  serialization.cpp  serialization.hpp
serializer/serializer/: CMakeLists.txt  serialization.cpp
serializer/tests/: CMakeLists.txt  serialization-test.cpp
tests/: CMakeLists.txt  serialization-test.cpp
